// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should renders <Ip> correctly with ip 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      mcsLiteIpConnection
    </title>
  </HelmetWrapper>
  <DashboardTitle
    title="mcsLiteIpConnection"
  />
  <DashboardDesc>
    description
  </DashboardDesc>
  <Table>
    <thead>
      <tr>
        <td>
          serviceIpAddress
        </td>
      </tr>
    </thead>
    <tbody>
      <tr
        key="127.0.0.1"
      >
        <td>
          127.0.0.1
        </td>
      </tr>
      <tr
        key="localhost"
      >
        <td>
          localhost
        </td>
      </tr>
    </tbody>
  </Table>
  <a
    href="//127.0.0.1"
    rel="noreferrer noopener"
    target="_blank"
  >
    <Styled(Button)>
      goToMCSLite
    </Styled(Button)>
  </a>
</div>
`;

exports[`should renders <Ip> correctly without ip 1`] = `
<div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      mcsLiteIpConnection
    </title>
  </HelmetWrapper>
  <DashboardTitle
    title="mcsLiteIpConnection"
  />
  <DashboardDesc>
    description
  </DashboardDesc>
  <Table>
    <thead>
      <tr>
        <td>
          serviceIpAddress
        </td>
      </tr>
    </thead>
    <tbody />
  </Table>
</div>
`;
